2008-09-11  Cosimo Cecchi  <cosimoc@gnome.org>

	* modulesets/gnome-suites-2.24.modules:
	bug-buddy branched for GNOME 2.24.

2008-09-10  Don Scorgie  <dscorgie@svn.gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: 
	Update rarian to 0.8.1 for GNOME 2.24

2008-09-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated iso-codes to the
	latest version, not required by any GNOME module but it fixes a build
	issue (when running with makeclean = True).

2008-09-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: catch really badly-timed ctrl-c on
	command exec.  (closes: #551641)

2008-09-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: display an error message on missing moduleset
	(closes: #551601).

2008-09-09  Ross Burton  <ross@burtonini.com>

	* modulesets/mobile-2.24.modules:
	Fix a typo in the eds-dbus configure arguments.

2008-09-08  Jonh Wendell <jwendell@gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: Bump gtk-vnc dep to
	0.3.7.

2008-09-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: swfdec 0.8 has been
	released.

2008-09-08  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-suites-2.24.modules: add a couple of gedit dops
	that were pulled in by libgnome.

2008-09-07  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules: Telepathy and farsight are
	moving to git.collabora.co.uk.

	* modulesets/freedesktop-2.24.modules: add farsight2

2008-09-07  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-suites-2.24.modules: gedit does not depend
	on libgnomeui anymore.

2008-09-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.24.modules: Conduit branched for
	gnome-2-24.

2008-09-06  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/pulseaudio.modules: libsamplerate 0.1.4

2008-09-06  Marc-André Lureau  <marcandre.lureau@gmail.com>
