@@ -1,3 +1,5 @@
 John Carr <john.carr@unrouted.co.uk>
 Frederic Peters <fpeters@0d.be>
-API <apinheiro@igalia.com>
+Alejandro Piñeiro <apinheiro@igalia.com>
+Iago Toral <itoral@igalia.com>
+Jose Dapena <jdapena@igalia.com>
