@@ -1,5 +1,5 @@
 # jhbuild - a build script for GNOME 1.x and 2.x
-# Copyright (C) 2008  apinheiro@igalia.com, John Carr, Frederic Peters
+# Copyright (C) 2008  Igalia S.L., John Carr, Frederic Peters
 #
 #   factory.py: procedures to update, build and check modules
 #
