@@ -1,3 +1,14 @@
+2008-09-11  Iago Toral Quiroga  <itoral@igalia.com>
+
+	* buildbot/AUTHORS:
+	* jhbuild/buildbot/changes.py:
+	* jhbuild/buildbot/factory.py:
+	* jhbuild/buildbot/scheduler.py:
+	* jhbuild/buildbot/status/web/feeds.py:
+	* jhbuild/buildbot/status/web/waterfall.py:
+	* jhbuild/buildbot/steps.py:
+	Added missing authors and updated buildbot copyrigt headers.
+
 2008-09-11  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* modulesets/gnome-suites-2.24.modules:
